where we are atm

--- a/ProjectArchon/src/main/resources/assets/projectarchon/lang/en_us.json
+++ b/ProjectArchon/src/main/resources/assets/projectarchon/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "entity.minecraft.villager.projectarchon.rotater_master": "Rotater Master",
   "block.projectarchon.blueberry_crop": "Blueberry Crop",
   "block.projectarchon.example_block": "Example Block",
   "block.projectarchon.rotatable_block": "Rotatable Block",
